fix change header type to icon + modal z-index

--- a/src/frontend/assets/css/general_styles.css
+++ b/src/frontend/assets/css/general_styles.css
@@ -6,7 +6,7 @@
   justify-content: center;
   overflow: hidden;
   position: fixed;
-  z-index: 40;
+  z-index: 1000;
   bottom: 0;
   left: 0;
   right: 0;
